[gd_scene load_steps=9 format=3 uid="uid://ctmxelmponiux"]

[ext_resource type="PackedScene" uid="uid://j2jy5p1ojh58" path="res://addons/macchi's_gui_manager/nodes/gui/gui/gui.tscn" id="1_xtv8e"]
[ext_resource type="Script" path="res://nodes/screens/customize_character_screen/customize_character_screen.gd" id="2_o27bf"]
[ext_resource type="PackedScene" uid="uid://bqny6jbecen3l" path="res://nodes/gui/cosmetic_select_card/cosmetic_select_card.tscn" id="3_efnlc"]
[ext_resource type="Resource" uid="uid://ohh3qdnbacsf" path="res://resources/cosmetics_collection/cosmetics_collection.tres" id="3_v3djt"]
[ext_resource type="PackedScene" uid="uid://bg70bh8vbivny" path="res://nodes/gui/cosmetics_display_card_container/cosmetics_display_card_container.tscn" id="4_0d1ie"]
[ext_resource type="Theme" uid="uid://cd55r8awc3jgy" path="res://themes/main_theme.tres" id="6_0s422"]
[ext_resource type="PackedScene" uid="uid://csqbhpsiauwpf" path="res://nodes/gui_components/hide_scroll_bar/hide_scroll_bar.tscn" id="7_s24ny"]
[ext_resource type="PackedScene" uid="uid://der1edoxrqxln" path="res://nodes/gui_components/set_game_state_on_gui_active/set_game_state_on_gui_active.tscn" id="8_31fep"]

[node name="CustomizeCharacterScreen" node_paths=PackedStringArray("cosmetic_select_card", "cosmetic_display_card_container") instance=ExtResource("1_xtv8e")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_o27bf")
cosmetics_collection = ExtResource("3_v3djt")
cosmetic_select_card = NodePath("CenterContainer/Root/HBoxContainer/CosmeticSelectCard")
cosmetic_display_card_container = NodePath("CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer")

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Root" type="Control" parent="CenterContainer" index="0"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Root" index="0"]
custom_minimum_size = Vector2(1720, 528)
layout_mode = 2
offset_left = -860.0
offset_top = -264.0
offset_right = 963.0
offset_bottom = 264.0
theme = ExtResource("6_0s422")
theme_override_constants/separation = 30
alignment = 1

[node name="CosmeticSelectCard" parent="CenterContainer/Root/HBoxContainer" index="0" instance=ExtResource("3_efnlc")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/Root/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
mouse_force_pass_scroll_events = false

[node name="CosmeticsDisplayCardContainer" parent="CenterContainer/Root/HBoxContainer/ScrollContainer" index="0" instance=ExtResource("4_0d1ie")]
layout_mode = 2
size_flags_vertical = 3
cosmetics_collection = ExtResource("3_v3djt")

[node name="HideScrollBar" parent="CenterContainer/Root/HBoxContainer/ScrollContainer" index="1" node_paths=PackedStringArray("scroll_container") instance=ExtResource("7_s24ny")]
scroll_container = NodePath("..")

[node name="SetGameStateOnGUIActive2" parent="." index="2" node_paths=PackedStringArray("gui") instance=ExtResource("8_31fep")]
gui = NodePath("..")
activated_state = "customize_character"
deactivated_state = "default"

[node name="SetGameStateOnGUIActive" parent="." index="3" node_paths=PackedStringArray("gui") instance=ExtResource("8_31fep")]
gui = NodePath("..")
activated_state = "paused"
deactivated_state = "playing"

[connection signal="updated" from="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer" to="CenterContainer/Root/HBoxContainer/CosmeticSelectCard" method="_on_cosmetics_display_card_container_updated"]
[connection signal="visibility_changed" from="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234273" to="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234273" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234275" to="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234275" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234277" to="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234277" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234279" to="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234279" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234281" to="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234281" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234283" to="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234283" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234285" to="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234285" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234287" to="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234287" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234289" to="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234289" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234291" to="CenterContainer/Root/HBoxContainer/ScrollContainer/CosmeticsDisplayCardContainer/@Control@234291" method="_on_visibility_changed"]
